--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,4 @@ djangorestframework>=3.14,<4.0
 djangorestframework-simplejwt>=5.3,<6.0
 pytest>=7.0,<9.0
 pytest-django>=4.0,<5.0
+pytest-cov>=5.0,<6.0
